cf_analysis_results/checkerframework_3.42.0_results/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8.txt
../dataset/june2020_dataset/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:109: error: (required.method.not.called) $$ 4 $$ method close $$ scanner.useDelimiter(EMPTY_PATTERN) $$ java.util.Scanner $$ regular method exit $$ ( 4507, 4542 ) $$ @MustCall method close may not have been invoked on scanner.useDelimiter(EMPTY_PATTERN) or any of its aliases.
        scanner.useDelimiter(EMPTY_PATTERN);
                            ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:111: error: (required.method.not.called) $$ 4 $$ method close $$ scanner.useDelimiter(WHITESPACE_PATTERN) $$ java.util.Scanner $$ regular method exit $$ ( 4598, 4638 ) $$ @MustCall method close may not have been invoked on scanner.useDelimiter(WHITESPACE_PATTERN) or any of its aliases.
        scanner.useDelimiter(WHITESPACE_PATTERN);
                            ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:132: error: (required.method.not.called) $$ 4 $$ method close $$ scanner.useDelimiter(EMPTY_PATTERN) $$ java.util.Scanner $$ possible exceptional exit due to null with exception type java.lang.AssertionError $$ ( 5202, 5237 ) $$ @MustCall method close may not have been invoked on scanner.useDelimiter(EMPTY_PATTERN) or any of its aliases.
        scanner.useDelimiter(EMPTY_PATTERN);
                            ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: possible exceptional exit due to null with exception type java.lang.AssertionError
../dataset/june2020_dataset/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:136: error: (required.method.not.called) $$ 4 $$ method close $$ scanner.useDelimiter(WHITESPACE_PATTERN) $$ java.util.Scanner $$ regular method exit $$ ( 5406, 5446 ) $$ @MustCall method close may not have been invoked on scanner.useDelimiter(WHITESPACE_PATTERN) or any of its aliases.
        scanner.useDelimiter(WHITESPACE_PATTERN);
                            ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:149: error: (required.method.not.called) $$ 4 $$ method close $$ scanner.useDelimiter(EVERYTHING_PATTERN) $$ java.util.Scanner $$ regular method exit $$ ( 5757, 5797 ) $$ @MustCall method close may not have been invoked on scanner.useDelimiter(EVERYTHING_PATTERN) or any of its aliases.
        String result = scanner.useDelimiter(EVERYTHING_PATTERN).next();
                                            ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:151: error: (required.method.not.called) $$ 4 $$ method close $$ scanner.useDelimiter(WHITESPACE_PATTERN) $$ java.util.Scanner $$ regular method exit $$ ( 5893, 5933 ) $$ @MustCall method close may not have been invoked on scanner.useDelimiter(WHITESPACE_PATTERN) or any of its aliases.
        scanner.useDelimiter(WHITESPACE_PATTERN); // but let's do it anyway
                            ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/algorithms/StdIn.java:310: error: (required.method.not.called) $$ 4 $$ method close $$ StdIn.scanner.useLocale(LOCALE) $$ java.util.Scanner $$ regular method exit $$ ( 11907, 11938 ) $$ @MustCall method close may not have been invoked on StdIn.scanner.useLocale(LOCALE) or any of its aliases.
        StdIn.scanner.useLocale(LOCALE);
                               ^
  The type of object is: java.util.Scanner.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/tests/Test.java:83: error: (required.method.not.called) $$ 4 $$ method close $$ fr $$ java.io.FileReader $$ possible exceptional exit due to bf.readLine() with exception type java.io.IOException $$ ( 1606, 1640 ) $$ @MustCall method close may not have been invoked on fr or any of its aliases.
			FileReader fr = new FileReader(f);
			           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to bf.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/tests/KnapsackInstances.java:23: error: (required.method.not.called) $$ 4 $$ method close $$ fr $$ java.io.FileReader $$ possible exceptional exit due to bf.readLine() with exception type java.io.IOException $$ ( 501, 534 ) $$ @MustCall method close may not have been invoked on fr or any of its aliases.
		FileReader fr= new FileReader(f);
		           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to bf.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/url2b9f720f64_jfimbett_QBnB_tgz-pJ8-tests_TestJ8/src/knapSavings/KnapSavings.java:151: error: (required.method.not.called) $$ 4 $$ method close $$ fr $$ java.io.FileReader $$ possible exceptional exit due to bf.readLine() with exception type java.io.IOException $$ ( 3154, 3187 ) $$ @MustCall method close may not have been invoked on fr or any of its aliases.
		FileReader fr= new FileReader(f);
		           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to bf.readLine() with exception type java.io.IOException
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
